--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-table": "^8.20.6",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
