--- a/cors-config.json
+++ b/cors-config.json
@@ -1,8 +1,18 @@
 [
     {
-      "origin": ["http://localhost:3000"],
-      "method": ["GET", "POST", "PUT", "DELETE", "HEAD"],
-      "responseHeader": ["Content-Type", "Access-Control-Allow-Origin"],
+      "origin": [
+        "http://localhost:3000",
+        "https://event-form.vercel.app",
+        "https://event-form-git-main-zainabalazzawis-projects.vercel.app"
+      ],
+      "method": ["GET", "POST", "PUT", "DELETE", "HEAD", "OPTIONS"],
+      "responseHeader": [
+        "Content-Type",
+        "Access-Control-Allow-Origin",
+        "Access-Control-Allow-Methods",
+        "Access-Control-Allow-Headers",
+        "Authorization"
+      ],
       "maxAgeSeconds": 3600
     }
   ]
