--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@as-integrations/next": "^3.1.0",
     "@google-cloud/storage": "^7.15.0",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.3",
